# stratix-ai-api

./: .env.example  .gitignore  README.md  pyproject.toml  vercel.json
app/: __init__.py  index.py  main.py
app/api/v1/: admin.py  auth.py  backtests.py  catalog.py  (+3 more)
app/core/: config.py  database.py  logging.py  security.py
app/models/: __init__.py  domain.py
app/repositories/: backtests.py  strategies.py  users.py
app/schemas/: auth.py  backtests.py  catalog.py  common.py  preferences.py  refinement.py  strategy.py
app/services/: ai_parser.py  backtest_engine.py  catalog.py  indicators.py  market_data.py  metrics.py  results_serializer.py  strategy_codegen.py  strategy_compiler.py  strategy_refinement.py  strategy_validator.py
app/workers/: jobs.py  runners.py
datasets/bars/: BNBUSDT_15m.csv  BNBUSDT_1d.csv  BNBUSDT_1h.csv  BNBUSDT_4h.csv  BNBUSDT_5m.csv  BTCUSDT_15m.csv  BTCUSDT_1d.csv  BTCUSDT_1h.csv  BTCUSDT_4h.csv  BTCUSDT_5m.csv  ETHUSDT_15m.csv  ETHUSDT_1d.csv  ETHUSDT_1h.csv  ETHUSDT_4h.csv  ETHUSDT_5m.csv  EURUSD_15m.csv  EURUSD_1d.csv  EURUSD_1h.csv  EURUSD_4h.csv  EURUSD_5m.csv  GBPUSD_15m.csv  GBPUSD_1d.csv  GBPUSD_1h.csv  GBPUSD_4h.csv  GBPUSD_5m.csv  SOLUSDT_15m.csv  SOLUSDT_1d.csv  SOLUSDT_1h.csv  SOLUSDT_4h.csv  SOLUSDT_5m.csv  USDJPY_15m.csv  USDJPY_1d.csv  USDJPY_1h.csv  USDJPY_4h.csv  USDJPY_5m.csv  XAUUSD_15m.csv  XAUUSD_1d.csv  XAUUSD_1h.csv  XAUUSD_4h.csv  XAUUSD_5m.csv
scripts/: generate_sample_data.py
tests/api/: test_production_flows.py
tests/unit/: test_backtest_engine.py  test_prompt_parser.py  test_refinement_engine.py
